welcome.lessons.welcome.array.array667.Array667.scala.error
array667:5: error: type mismatch;
 found   : Boolean
 required: Int
    if (nums(i)==6 && nums(i+1==6)) {compteur6=compteur6+1}
                              ^array667:6: error: type mismatch;
 found   : Boolean
 required: Int
    if (nums(i)==6 && nums(i+1==7)) {compteur7=compteur7+1}
                              ^